--- a/The Capstone Project.ipynb
+++ b/The Capstone Project.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -22,6 +22,7 @@
    ],
    "source": [
     "import numpy as np # library to handle data in a vectorized manner\n",
+    "\n",
     "\n",
     "import pandas as pd # library for data analsysis\n",
     "pd.set_option('display.max_columns', None)\n",
@@ -41,7 +42,7 @@
     "\n",
     "# import k-means from clustering stage\n",
     "from sklearn.cluster import KMeans\n",
-    "import \n",
+    "from bs4 import BeautifulSoup\n",
     "\n",
     "import folium  # map rendering library\n",
     "\n",
@@ -57,21 +58,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'BeautifulSoup' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-221-6714074f9b43>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0msource\u001b[0m \u001b[1;33m=\u001b[0m\u001b[0mrequests\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"https://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0msoup\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mBeautifulSoup\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msource\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'lxml'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'BeautifulSoup' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "source =requests.get(\"https://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M\").text\n",
     "soup=BeautifulSoup(source,'lxml')"
@@ -86,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
